--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "d3": "^7.9.0",
     "next": "15.1.7",
     "react": "^19.0.0",
